# BloodEngine

./: .gitignore  CMakeLists.txt
libs/lib/xml/: tinyxml2.lib
libs/vs_analyzer/WxWidgets/wx/: setup.h
res/UX/: 1resource.xrc  main.fbp  resource.xrc
res/UX/key_layout/: wx_layout.xml
src/: logger.cpp  logger.h  main.cpp
src/camera/: camera.cpp  camera.h
src/core/graphics/buffers/: buffers.cpp  buffers.h
src/core/graphics/camera/: base_camera.cpp  base_camera.h  camera.cpp  camera.h
src/core/graphics/shader/: shader.cpp  shader.h
src/core/graphics/viewport/: wx_gl_viewport.cpp  wx_gl_viewport.h
src/core/input/: base_input.cpp  base_input.h  wx_input.cpp  wx_input.h
src/core/logger/: logger.h
src/debug_gui/: table.cpp  table.h
src/debug_gui/wx_input/: wx_input_class.cpp  wx_input_class.h
src/gui/: table.cpp  table.h
src/gui/wx_input/: wx_input_class.cpp  wx_input_class.h
src/viewport/: frame_gl.cpp  frame_gl.h
src/viewport/input/: input.cpp  input.h
src/viewport_gl/: frame_gl.h
src/viewport_gl/input/: input.cpp  input.h
